# mimik_robot_setup

./: README.md
mimic_ur3_description/: CMakeLists.txt  package.xml
mimic_ur3_description/launch/: load_robot_description.launch  view_mimic_ur3_lab_mobile.launch
mimic_ur3_description/urdf/: mimic_ur3_lab_mobile.xacro
mimic_ur3_lab_mobile_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mimic_ur3_lab_mobile_moveit_config/config/: gazebo_mimic_ur3_station_portable.urdf  kinematics.yaml  mimic_ur3_station_portable.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
mimic_ur3_lab_mobile_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
mimic_ur3_setup_bringup/: CMakeLists.txt  package.xml
mimic_ur3_setup_bringup/config/: ur3_controllers.yaml
mimic_ur3_setup_bringup/launch/: mimic_ur3_lab_mobile_bringup.launch  mimic_ur3_lab_mobile_capture_tool_bringup.launch
mimic_ur3_setup_description/: CMakeLists.txt  package.xml
mimic_ur3_setup_description/launch/: load_mimic_ur3_lab_mobile.launch  load_mimic_ur3_lab_mobile_capture_tool.launch  view_mimic_ur3_lab_mobile.launch  view_mimic_ur3_lab_mobile_capture_tool.launch
mimik_cog/: CMakeLists.txt  package.xml
mimik_cog/src/: cog.cpp  ur3_tool_cog.cpp  (+2 more)
mimik_moveit_com/: CMakeLists.txt  package.xml
mimik_panda_lab3023_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mimik_robot_setup_bringup/: CMakeLists.txt  package.xml
mimik_robot_setup_bringup/config/: ur3_controllers.yaml
mimik_robot_setup_bringup/launch/: mimik_ur3_lab3023_bringup.launch  mimik_ur3_lab3023_bringup_move_group.launch  mimik_ur3_lab3023_hand_to_eye_calibration.launch  mimik_ur3_lab_mobile_bringup.launch  mimik_ur3_lab_mobile_bringup_move_group.launch  mimik_ur3_lab_mobile_capture_tool_bringup.launch  mimik_ur3_lab_mobile_fts_gripper_bringup.launch
mimik_robot_setup_description/: CMakeLists.txt  package.xml
mimik_ur3_cog/: CMakeLists.txt  package.xml
mimik_ur3_cog/include/mimik_ur3_cog/: cog.h  transform_frame.h  transform_pose.h
mimik_ur3_cog/launch/: load_mimik_ur3_lab_mobile.launch  load_mimik_ur3_lab_mobile_capture_tool.launch  view_mimik_ur3_lab_mobile_fts_gripper.launch
mimik_ur3_cog/src/: cog.cpp  pipette_tool_cog.cpp  transform_frame.cpp  transform_pose.cpp  ur3_tool_cog.cpp
mimik_ur3_lab3023_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mimik_ur3_lab_mobile_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mimik_ur3_setup_bringup/: CMakeLists.txt  package.xml
mimik_ur3_setup_description/: CMakeLists.txt  package.xml
mimik_ur5_lab3023_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+128 files in other folders)
