<?xml version="1.0"?>
<package format="2">
  <name>mimic_ur3_setup_bringup</name>
  <version>0.0.0</version>
  <description>Mimic's UR3 laboratory setup</description>

  <author>Captain Yoshi</author>
  <maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mimic_ur_launch</exec_depend>
  <exec_depend>mimic_ur3_setup_description</exec_depend>

</package>
