<?xml version="1.0"?>
<package format="2">
  <name>mimik_ur3_cog</name>
  <version>0.0.0</version>
  <description>Mimik's utilities to compute the CoG of robot setups</description>

  <author>Captain Yoshi</author>
  <maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>orocos_kdl</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>kdl_conversions</depend>

</package>
